# CSAHCA

./: .gitignore  README.md  pyproject.toml  setup.py
csrc/: bindings.cpp  csa_attention.cu  dsv4_attention.cu
docs/: dsv4_abi_status.md  model_kernel_benchmark.md  optimization_report.md  project_plan.md
hybrid_attention/: __init__.py  benchmark.py  correctness.py  dsv4_benchmark.py  dsv4_correctness.py  extension.py  model_inference.py  reference.py
integrations/sglang_dsv4/: README.md  STATUS.md  csahca_sglang_dsv4_native.py  sitecustomize.py
integrations/sglang_dsv4/csahca_sglang_dsv4_patch/: __init__.py  operator_bridge.py  patch.py
integrations/sglang_dsv4/scripts/: bench_http_chat.py  bench_http_chat.sh  bench_openai_random.sh  install_native_sglang_patch.py  launch_patched_dsv4.sh  replay_capture.py  restart_patched_detached.sh  restart_patched_on_port.sh  run_shadow_compare.sh  smoke_import_hook.sh  summarize_live_compare.py
results/: README.md
scripts/: profile_ncu.sh  profile_ncu_tiled.sh  profile_nsys.sh  profile_nsys_tiled.sh  run_bench.sh  run_inference_demo.sh  run_model_kernel_ab.sh  setup_h100_uv_env.sh
